# aconcagua

./: .gitignore  CLAUDE.md  CMakeLists.txt  PLAN.md
Source/: Main.cpp  MainWindow.cpp  MainWindow.h
Source/Audio/: LiveAudioEngine.cpp  LiveAudioEngine.h
Source/Model/: BenchmarkConfig.h  BenchmarkResult.h  ResultsExporter.cpp  ResultsExporter.h
Source/PluginHost/: BenchmarkEngine.cpp  BenchmarkEngine.h  IdlePump.cpp  IdlePump.h  PluginLoader.cpp  PluginLoader.h
Source/UI/: AconcaguaLookAndFeel.cpp  AconcaguaLookAndFeel.h  ConfigTab.cpp  ConfigTab.h  HistogramTab.cpp  HistogramTab.h  ResultsTab.cpp  ResultsTab.h
